data/derived/comb/progs/unify/prog4877.ml.out
Characters 138-142:
  let (_, res) = List.fold_left f base args in
                                       ^^^^
Error: This expression has type int * 'a
       but an expression was expected of type (int * 'b list) list
